...
      ar: 'Arabic',
    },
  },
  gender: {
    female: 'Female',
    male: 'Male',
    other: 'Other',
  },
  navigation: {
    error: {
      errorMessage: 'Oops... looks like something went wrong.',
      tryAgainMessage: 'Please try again later.',
      serverErrorMessage:
...
      CratesInfo: 'Crates Info',
      Dashboard: 'Dashboard',
      History: 'History',
      MarketPrice: 'Crop Prices',
      CoolingUnits: 'Cooling units',
      Analytics: 'Analytics',
      CheckIn: 'Check In',
      CheckOut: 'Check Out',
      Maps: 'Maps',
      More: 'More',
    },
    dashboard: {
      AccountDetails: 'Account details',
...
      MarketplaceFavoritesTab: 'Favorites',
      Orders: 'Orders',
      MyOrders: 'My Orders',
      MySales: 'My Sales',
      OrderDetails: '{{orderCode}}',
      KnowledgeHub: 'Knowledge Hub',
      QuitTutorial: 'Quit Tutorial',
      FAQ: 'FAQ',
      About: 'About',
      Management: 'Management',
      Tutorial: 'Tutorial',
      PayoutOptions: 'Payout options',
      PaymentMethods: 'Payment methods',
...
    },
  },
  Auth: {
    welcomePopup:
      "Welcome to Coldtivate! If you are a farmer, a trader, or are interested in purchasing produce stored in the cold rooms, please sign up by clicking on 'Sign up as cooling user or consumer'. If you work for a cooling company, please contact your responsible to check whether your company is registered. If it is, your responsible should send you an SMS invite for you to sign up as a registered 
    Root: {
      welcome: 'Welcome to Coldtivate',
      signIn: 'Sign In',
      signUpCompany: 'Sign up as Company',
      signUpCoolingUser: 'Sign Up as a Cooling User or Consumer',
      appInfo: 'App Info',
    },
    SignIn: {
...
    },
    SignUp: {
      select: {
        header: 'Select a {{fieldName}}',
        label: 'Search...',
        cancel: 'Cancel',
        ok: 'OK',
      },
      welcome: 'Welcome to Coldtivate',
      schema: {
        passwordError:
          'Your password needs to be at least 8 characters long, contain one uppercase and one lowercase letters, and a number.',
        confirmPasswordError: 'Password confirmation is mandatory.',
...
        emailError: 'Email is mandatory.',
        malformedEmailError: 'Invalid email.',
      },
      commonForm: {
        firstNameLabel: 'First Name',
        lastNameLabel: 'Last Name',
        phoneLabel: 'Phone Number (with country code)',
        passwordLabel: 'Password',
        confirmPasswordLabel: 'Confirm Password',
        countryFieldName: 'country',
        genderFieldName: 'gender',
        submit: 'Sign Up',
        terms: {
...
          'Minimum eight characters, at least one uppercase letter, one lowercase letter and one number.',
      },
    },
  },
  Dashboard: {
    TemperatureAlert: {
      title: 'Temperature alert',
      subtitle: 'We noticed there was a change. These are the commodities currently in storage.',
      edit: 'Do you want to edit the temperature ?',
      temperature: 'Temperature',
      newTemperature: 'New temperature',
      confirm: 'Confirm new temperature',
      continueWithoutUpdate: 'Continue without update',
      sensorHint: 'Cannot add temperature because a sensor is connected to the cooling unit.',
      latestTemperature: 'The latest temperature was registered on {{date}}.',
    },
    emptyGeneral: 'At the moment, there is no available data.',
    emptyCoolingUser:
      'Items in storage will appear in the dashboard when you do at least one check-in in any room.',
...
        },
        paid: 'Paid',
        lockedWithinPendingOrders:
          'Crates that are locked in pending orders cannot be checked out.',
      },
      CheckIn: {
        emptyState: 'No boxes added yet',
        addCrates: 'Add Crates',
        cratesAddedLabel: 'Crates Added',
        checkInWithCode: 'Check in with code',
        estimatedCost: 'Estimated Cost',
        pricing: 'Pricing',
        day: 'day',
        successMessage: 'Crates were successfully checked in',
        emptyMessage: 'Please add at least one crate to your check in',
        noPlannedDaysMessage:
          'Missing planned days on some items. Cannot calculate estimated cost.',
        seeMore: 'See more',
        seeLess: 'See less',
        listed: 'Listed',
        WithCode: {
          modalTitle: 'Create Check In from existing Check Out',
          modalDescription:
            'You will need the check out code to start a new check in in this way. If you don’t have it, consider starting a new check in. If you know how long you plan to store, consider adding the number of days here.',
          codeLabel: 'Add code',
          codeErrorMessage: 'Code is required',
          failedMessage:
            "Check in failed. Please make sure your code hasn't been used already or contact support.",
        },
        SelectCropType: {
          fruits: 'Fruits',
          vegetables: 'Vegetables',
          rootVegetables: 'Root Vegetables',
          other: 'Other Items',
        },
        SelectCrop: {
          additionalInfo: 'Additional Info',
...
          numberOfCratesLabel: 'Number of crates',
          crateWeightLabel: 'Crate weight and marketplace listing',
          pricePerDayAndCrateLabel: 'Price per day / crate',
          pricePerDayAndKilogramLabel: 'Price per day / kg',
          fixedPriceLabel: 'Fixed price',
          totalPriceLabel: 'Total price',
          plannedDaysLabel: 'Planned number of days in storage',
          harvestDateLabel: 'When was the crop harvested?',
          harvestDateValues: {
            today: 'Today',
            yesterday: 'Yesterday',
            dayBefore: 'Two days back',
            evenBefore: 'Even Before',
...
        success: 'Successfully updated user',
      },
      sections: {
        sellerSettings: 'Seller Settings',
        companySellerSettings: 'Seller Settings (Company)',
        buyerSettings: 'Buyer Settings',
        details: 'Details',
      },
      ContactsSharing: {
        publicPhone: 'Make phone number public',
        publicEmail: 'Make e-mail public',
      },
      PayoutSettings: {
...
        form: {
          nameLabel: 'Account name',
          namePlaceholder: 'Insert account name',
          accountNumberLabel: 'Account number',
          accountNumberPlaceholder: 'Insert account number',
          countryLabel: 'Country',
          nigeria: 'Nigeria',
          selectBank: 'Select bank from list',
          bank: 'Bank',
          accountType: 'Account Type',
          selectAccountType: 'Select account type',
          accountTypes: {
            personal: 'Personal',
...
