...
              iconColor={paperTheme.colors.primary}
              containerColor={paperTheme.colors.secondaryContainer}
              onPress={(evt) => {
                evt.stopPropagation();
                onChangeNumericKeyboard(!value ? 0 : Number(value) - 1, onChange, 'plannedDays');
              }}
              testID="plannedDays-minus"
            />
            <IconButton
              mode="contained-tonal"
              icon="plus"
              size={30}
              tw="rounded-md border border-green-primary"
              iconColor={paperTheme.colors.primary}
              containerColor={paperTheme.colors.secondaryContainer}
              onPress={(evt) => {
                evt.stopPropagation();
                onChangeNumericKeyboard(Number(value ?? 0) + 1, onChange, 'plannedDays');
              }}
              testID="plannedDays-plus"
            />
          </View>
        )}
      />
      <Divider tw="bg-gray-400 mt-4" />
    </View>
...
