...
              iconColor={paperTheme.colors.primary}
              containerColor={paperTheme.colors.secondaryContainer}
              onPress={(evt) => {
                evt.stopPropagation();
                onChangeNumericKeyboard(!value ? 0 : Number(value) - 1, onChange, 'numberOfCrates');
              }}
              testID="numberOfCrates-minus"
            />
            <IconButton
              mode="contained-tonal"
              icon="plus"
              size={30}
              tw="rounded-md border border-green-primary"
              iconColor={paperTheme.colors.primary}
              containerColor={paperTheme.colors.secondaryContainer}
              onPress={(evt) => {
                evt.stopPropagation();
                onChangeNumericKeyboard(Number(value ?? 0) + 1, onChange, 'numberOfCrates');
              }}
              testID="numberOfCrates-plus"
            />
          </View>
        )}
      />
      {hasError ? <Text tw="text-xs text-red-600 mt-[2] pl-3 w-[95%]">{errorMessage}</Text> : null}
      <Divider tw="bg-gray-400 mt-4" />
...
