...
          onPress={(evt) => {
            evt.stopPropagation();
            setIsCrateManagementOpen((v) => !v);
          }}
          onLayout={onLayout}
          disabled={!coolingUnit}
          testID="dashboard-operator-actions"
        >
          {isCrateManagementOpen ? (
            <Icon source="close" size={25} color="white" />
          ) : (
            <CratesManagement width={30} height={30} />
          )}
...
        <View tw="flex flex-row">
          <SkiaShadow blur={4} dx={0} dy={4} color={colors.zinc[200]} borderRadius={20}>
            <TouchableOpacity
              tw="w-10 h-10 mx-1 items-center justify-center rounded-xl bg-green-primary"
              onPress={onCheckIn}
              onLayout={onCheckInLayout}
              testID="dashboard-operator-actions-checkin"
            >
              <CheckIn width={20} height={20} />
            </TouchableOpacity>
          </SkiaShadow>
          <SkiaShadow blur={4} dx={0} dy={4} color={colors.zinc[200]} borderRadius={20}>
            <TouchableOpacity
...
